force-app/main/default/objects/Watchlist__c/Watchlist__c.object-meta.xml
<CustomObject>
    <label>Watchlist</label>
    <nameField>
        <label>Ticker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WatchLists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>