force-app/main/default/objects/Watchlist__c/fields/Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available__c</fullName>
    <label>Stock Available</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>