force-app/main/default/objects/Watchlist__c/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <description>Stock Name</description>
    <externalId>true</externalId>
    <label>Ticker</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>