force-app/main/default/objects/Watchlist__c/validationRules/Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Current_Price__c</errorDisplayField>
    <errorMessage>Cannot be Less then 0</errorMessage>
</ValidationRule>