force-app/main/default/objects/Watchlist__c/validationRules/Quantity_Rul.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Rul</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Available__c&lt;0</errorConditionFormula>
    <errorMessage>Cannot be less then 0</errorMessage>
</ValidationRule>