force-app/main/default/objects/Watchlist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticker__c</columns>
    <columns>Stock_Available__c</columns>
    <columns>Current_Price__c</columns>
    <columns>Investment_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>